# ls-standard-library

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  coline.txt
source/: CMakeLists.txt
source/base/: Class.cpp  Class.hpp  Types.hpp  Version.cpp  Version.hpp
source/boxing/: Boolean.cpp  Boolean.hpp  Double.cpp  Double.hpp  Float.cpp  Float.hpp  IBoxing.hpp  Integer.cpp  Integer.hpp  Long.cpp  Long.hpp  String.cpp  String.hpp
source/exception/: FileNotFoundException.hpp  FileOperationException.hpp  IllegalArgumentException.hpp  IllegalArithmeticOperationException.hpp  IllegalOperationException.hpp
source/io/: File.cpp  File.hpp  FileOutputStream.cpp  FileOutputStream.hpp  FilePathSeparator.hpp  FilePathSeparatorMatch.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  IReader.hpp  IStorable.hpp  IWriter.hpp  LogLevel.hpp  NewLine.hpp  StorableFile.cpp  StorableFile.hpp
source/io/logging/: LogLevel.cpp  LogLevel.hpp  LogLevelValue.hpp  Logger.cpp  Logger.hpp
source/io/xml/: XMLAttribute.cpp  XMLAttribute.hpp  XMLDeclaration.cpp  XMLDeclaration.hpp  XMLDocument.cpp  XMLDocument.hpp  XMLNode.cpp  XMLNode.hpp  XMLParseData.hpp  XMLParseMode.hpp  XMLReader.cpp  XMLReader.hpp  XMLReaderMock.cpp  XMLReaderMock.hpp
source/logic/: State.cpp  State.hpp  StateConnection.cpp  StateConnection.hpp  StateMachine.cpp  StateMachine.hpp  StateMachineTypes.hpp
source/ls-std/boxing/: Boolean.cpp  Double.cpp  Float.cpp  Integer.cpp  Long.cpp  String.cpp
source/ls-std/core/: Class.cpp  ConditionalFunctionExecutor.cpp  LibraryVersion.cpp  Version.cpp
source/ls-std/core/evaluator/: EmptyStringArgumentEvaluator.cpp  IndexOutOfBoundsEvaluator.cpp  NullPointerArgumentEvaluator.cpp  NullPointerEvaluator.cpp
source/ls-std/core/exception/: EventNotHandledException.cpp  EventNotSubscribedException.cpp  Exception.cpp  ExceptionMessage.cpp  FileNotFoundException.cpp  FileOperationException.cpp  IllegalArgumentException.cpp  IllegalArithmeticOperationException.cpp  IncompleteJsonException.cpp  IndexOutOfBoundsException.cpp  NotImplementedException.cpp  NullPointerException.cpp  WrongCallException.cpp
source/ls-std/core/interface/: IBoxing.cpp  IEncoding.cpp  IEvaluator.cpp  IEventSubscriber.cpp  IJniApi.cpp  IListener.cpp  IReader.cpp  ISerializable.cpp  IStorable.cpp  IValidator.cpp  IWriter.cpp
source/ls-std/core/jni/: JniApi.cpp  JniClass.cpp  JniClassParameter.cpp  JniMethod.cpp  JniReturnValue.cpp
source/ls-std/core/utils/: RegexUtils.cpp
source/ls-std/encoding/: Base64.cpp
source/ls-std/encoding/cli/: cli-base64-main.cpp
source/ls-std/event/: Event.cpp  EventHandler.cpp  EventManager.cpp  Narrator.cpp
source/ls-std/event/serialization/: SerializableJsonEvent.cpp
source/ls-std/io/: File.cpp  FileOutputStream.cpp  FilePathSeparator.cpp  FilePathSeparatorMatch.cpp  FileReader.cpp  FileWriter.cpp  NewLine.cpp  StandardOutputWriter.cpp  StorableFile.cpp
source/ls-std/io/evaluator/: FileExistenceEvaluator.cpp
source/ls-std/io/kv/: KvDocument.cpp  KvFileReader.cpp  KvPair.cpp  KvParseParameter.cpp  KvParser.cpp
source/ls-std/io/logging/: LogLevel.cpp  Logger.cpp
source/ls-std/io/section-pair/: SectionPairIdentifierArgumentEvaluator.cpp  SectionPairIdentifierValidator.cpp  SectionPairMessageFormatter.cpp  SectionPairRow.cpp  SectionPairRowListValue.cpp  SectionPairRowSingleValue.cpp  SectionPairRowValue.cpp  SectionPairRowValueArgumentEvaluator.cpp  SectionPairRowValueValidator.cpp  SerializableSectionPairRowListValue.cpp  SerializableSectionPairRowSingleValue.cpp
source/ls-std/io/xml/: XmlAttribute.cpp  XmlDeclaration.cpp  XmlDocument.cpp  XmlNode.cpp  XmlParseParameter.cpp  XmlParser.cpp  XmlReader.cpp
source/ls-std/time/: Date.cpp
source/ls-std/time/common/: DateParameter.cpp  DateParameterMapper.cpp
source/ls-std/time/system-time/: IClock.cpp  IPosixClock.cpp  PosixClock.cpp  SystemTime.cpp  SystemTimeParameter.cpp  WindowsClock.cpp
source/ls_std/: ls_std.hpp
source/ls_std/base/: Class.cpp  Class.hpp  Types.hpp  Version.cpp  Version.hpp
source/ls_std/boxing/: Boolean.cpp  Boolean.hpp  Double.cpp  Double.hpp  Float.cpp  Float.hpp  IBoxing.hpp  Integer.cpp  Integer.hpp  Long.cpp  Long.hpp  String.cpp  String.hpp
source/ls_std/common/interface/: IPosixReader.cpp  IPosixSocket.cpp  IPosixWriter.cpp
source/ls_std/core/: Class.cpp  Version.cpp
source/ls_std/core/interface/: IPosixReader.cpp  IPosixSocket.cpp
source/ls_std/encoding/: Base64.cpp
source/ls_std/encoding/base64/: Base64.cpp
source/ls_std/encoding/cli/: cli_base64_main.cpp
source/ls_std/event/: Event.cpp  EventHandler.cpp  EventManager.cpp  Narrator.cpp
source/ls_std/event/serialization/: SerializableJsonEvent.cpp
source/ls_std/exception/: FileNotFoundException.hpp  FileOperationException.hpp  IllegalArgumentException.hpp  IllegalArithmeticOperationException.hpp  NullPointerException.hpp
source/ls_std/io/: File.cpp  File.hpp  FileOutputStream.cpp  FileOutputStream.hpp  FilePathSeparator.hpp  FilePathSeparatorMatch.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  IReader.hpp  IStorable.hpp  IWriter.hpp  NewLine.hpp  StandardOutputWriter.cpp  StorableFile.cpp  StorableFile.hpp
source/ls_std/logic/: IListener.cpp  Narrator.cpp  State.cpp  State.hpp  StateConnection.cpp  StateConnection.hpp  StateMachine.cpp  StateMachine.hpp  StateMachineTypes.hpp
source/ls_std/network/: Socket.cpp
source/ls_std/serialization/: ISerializable.hpp
source/ls_std/time/: Date.cpp  Date.hpp
source/ls_std/utils/: RegexUtils.hpp  STLUtils.hpp
source/serialization/: ISerializable.hpp
source/serialization/boxing/: SerializableJSONBoolean.cpp  SerializableJSONBoolean.hpp  SerializableJSONDouble.cpp  SerializableJSONDouble.hpp  SerializableJSONFloat.cpp  SerializableJSONFloat.hpp  SerializableJSONInteger.cpp  SerializableJSONInteger.hpp  SerializableJSONLong.cpp  SerializableJSONLong.hpp  SerializableJSONString.cpp  SerializableJSONString.hpp
source/time/: Date.cpp  Date.hpp
source/utils/: RegexUtils.hpp  STLUtils.hpp
(+839 files in other folders)
